correct button and input jump when p gets content

--- a/src/sass/base/_page.scss
+++ b/src/sass/base/_page.scss
@@ -19,8 +19,15 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
+}
+
+.container {
+  display: flex;
+  position: relative;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 input, button, p {
@@ -64,5 +71,8 @@ button {
 }
 
 p {
+  position: absolute;
+  top: 100%;
+  margin-top: 1.25rem;
   font-weight: $medium;
 }
